=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Changed: JW flash video player support now in separate module. Prepares for upcoming flash video support with or w/o Lightbox. (windmillway)
 - Added [ 2014313 ] Clippings: limit number of generations (yalnifj)
 - Lightbox: added JW flash player video support for .flv media files (windmillway)
 - Added Install Wizard.  Removed old editconfig.php (yalnifj)
 - Fixed [ 2130589 ] [3942] No GEDCOM upload replacement (fisharebest)
 - Fixed [ 2139591 ] Errors in configuration code (fisharebest)
 - Fixed [ 2078143 ] [3724] Ancestry chart errors (opus27)
 - Fix: [ 1791639 ] create_dates_table and SQL Server (fisharebest)
 - Fix: [ 1928205 ] SVN 2778 V4.1.4 Errors with MS SQL (fisharebest)
 - Added: [ 1428937 ] autocompletion of fields like place of birth (opus27)
 - Fixed: [ 2104235 ] Add Favorites refuses a long URL (fisharebest)
 - Fixed: IE script error message "wz_tooltip.js must be included INSIDE the body section...." (windmillway)
 - Added: 2nd generation fly-out menus for Details and Album Family Navigator (windmillway)
 - Fixed: (1) Missing underline of starred names on Charts. (2) Erratic width of Navigator on Album Tab page. (windmillway)  
 - Added list place size configuration setting (yalnifj)
 - Added: [ 1671551 ] 2-surnames support for PGV!!! (fisharebest)
 - Fixed: [ 2016270 ] Surname with commas (fisharebest)
 - Fixed:   Family_Nav - Possible "getLabel" error on certain indi's. (windmillway)
 - Changed: More aesthetic tidying up of Album Page Layout (fixed short table rows in IE) (windmillway)
 - Added:   Language support for Family navigator (ref. previous 2 entries). (windmillway)
 - Changed: General Tidying up of Family Navigator and associated nested tables (windmillway)